<resources>
    <string name="app_name">SCQN</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="create_barcode_title">Generate Barcode</string>
    <string name="create_barcode_content">Barcode Content</string>
    <string name="create_barcode_type">Barcode Type</string>
    <string name="create_barcode_forecolor">Foreground</string>
    <string name="create_barcode_bgcolor">Background</string>
    <string name="create_barcode_button">Generate Barcode</string>
    <string name="save_barcode_button">Save Barcode</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>